src/components/screens/playground/track/index.css
@import '~styles/variables.css';

.track {
  display: flex;
  vertical-align: top;

  max-width: 1200px;
  margin: auto;
}

.track-bloc {
  opacity: 0;
  animation: flashIn 0.2s;
  animation-fill-mode: both;
  vertical-align: top;
  min-width: 4rem;

  padding-bottom: var(--space);
  border-bottom-width: var(--space);
  border-bottom-style: solid;
  border-bottom-color: var(--shade);
  margin: 1rem 0;
}
.track-bloc + .track-bloc {
  margin-left: var(--space);
}
.track.active .track-bloc {
  border-color: var(--shade-light);
}
.track-bloc.compact {
  min-width: var(--box-size);
}

.track-bloc:before {
  display: block;
  content: attr(data-title);
  color: var(--shade);
  background-color: var(--shade-base);
  font-size: 0.75rem;
  font-weight: bold;
  padding-bottom: 0.5rem;
}
.track-bloc-title {
  flex-grow: 1;
}

.track:before,
.track-label {
  display: inline-block;
  height: var(--track-size);
  font-size: 2rem;
  color: var(--shade-light);
  line-height: var(--track-size);
}

.track:before {
  content: attr(data-id);
  width: 5rem;
  color: var(--shade-light);
  margin: 2.375rem 1rem 0;
  text-align: center;
}
.track.trackgenerator:before {
  margin-top: 0.25rem;
}
.track.active:before {
  color: var(--shade-base);
  background: var(--shade-active-on);
}
.track.active .track-label {
  color: var(--shade-active-on);
}

.track > *:nth-child(1) {
  animation-delay: 0s;
}
.track > *:nth-child(2) {
  animation-delay: 0.1s;
}
.track > *:nth-child(3) {
  animation-delay: 0.2s;
}
.track > *:nth-child(4) {
  animation-delay: 0.3s;
}
.track > *:nth-child(5) {
  animation-delay: 0.4s;
}
.track > *:nth-child(6) {
  animation-delay: 0.5s;
}
.track > *:nth-child(7) {
  animation-delay: 0.6s;
}
.track > *:nth-child(8) {
  animation-delay: 0.7s;
}

@keyframes flashIn {
  0% {
    opacity: 0;
  }

  10% {
    opacity: 0;
  }
  11% {
    opacity: 1;
  }
  12% {
    opacity: 0;
  }
  13% {
    opacity: 1;
  }
  14% {
    opacity: 0;
  }

  15% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@media (min-width: 1024px) {
  .track-label-large {
    display: inherit;
  }
  .track-label-short {
    display: none;
  }
}

@media (max-width: 1023px) {
  .track-label-large {
    display: none;
  }
  .track-label-short {
    display: inherit;
  }
}

